--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ img {
 }
 
 .container {
-    width: 1158px;
+    /* width: 1158px; */
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -167,9 +168,12 @@ img {
 /* HERO */
 
 .hero {
-    max-width: 1440px;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    /* max-width: 1440px; */
+    max-width: 428px;
+    /* padding-top: 188px;
+    padding-bottom: 188px; */
+    padding-top: 112px;
+    padding-bottom: 112px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -177,15 +181,19 @@ img {
 }
 
 .hero-title {
-    max-width: 496px;
-    font-size: 56px;
-    line-height: 1.07;
+    /* max-width: 496px; */
+    max-width: 320px;
+    /* font-size: 56px; */
+    /* line-height: 1.07; */
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--white);
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
+    /* margin-bottom: 48px; */
+    margin-bottom: 72px;
 }
 
 .hero-btn {
@@ -220,12 +228,16 @@ img {
 
 .advantages-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* gap: 24px; */
+    gap:72px;
 }
 
 .advantages {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-top: 120px;
+    padding-bottom: 120px; */
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .visually-hidden {
@@ -242,12 +254,16 @@ img {
 }
 
 .advantages-title {
-    font-weight: 500;
+    /* font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 1.2; */
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     color: var(--navy-blue);
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .advantages-description {
@@ -258,10 +274,11 @@ img {
 }
 
 .advantages-item {
-    width: calc((100% - 72px) / 4)
+    /* width: calc((100% - 72px) / 4) */
+    width: 100%;
 }
 
-.advantages-box {
+/* .advantages-box {
     display: flex;
     background-color: var(--cloud);
     min-height: 112px;
@@ -270,8 +287,20 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
+.advantages-icon {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 
 /* PROJECTS */
@@ -1003,3 +1032,34 @@ margin-bottom: 8px;
 }
 
 /* SUBSCRIBE */
+
+
+
+/* 320+ */
+@media screen and (min-width: 768px) {
+
+/* BANNER */
+
+    .container {
+        width: 736px;
+    }
+
+/* ADVANTAGES */
+
+
+
+}
+
+@media screen and (min-width: 1140) {
+    .container {
+        width: 1158px;
+    }
+
+    .hero {
+        max-width: 1440px;
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
+
+    
+}
