--- a/css/styles.css
+++ b/css/styles.css
@@ -330,21 +330,32 @@ img {
 
 /* TEAM */
 
+.container-team {
+    width: 294px;
+    align-self: center;
+}
+
 .team {
     background-color: var(--cloud);
-    padding-bottom: 120px;
-    padding-top: 120px;
+    /* padding-bottom: 120px;
+    padding-top: 120px; */
+    padding-bottom: 96px;
+    padding-top: 96px;
 }
 
 .team-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    /* gap: 24px; */
+    gap: 72px;
 }
 
 .team-item {
     background-color: var(--white);
     border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px) / 4);
+    /* width: calc((100% - 72px) / 4); */
+    width: 100%;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
@@ -426,21 +437,35 @@ img {
 
 .footer-container {
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     align-items: baseline;
 }
 
 .footer-column-1 {
-    max-width: 264px;
-    margin-right: 120px;
+    /* max-width: 264px; */
+    width: 268px;
+    /* margin-right: 120px; */
+    /* margin: 0 auto; */
+    align-self: center;
+    margin-bottom: 72px;
 }
 
 .footer-column-2 {
     max-width: 208px;
+    align-self: center;
+
 }
 
 .footer-column-subscribe {
-    max-width: 453px;
-    margin-left: 80px;
+    /* max-width: 453px; */
+    max-width: 198px;
+    /* margin-left: 80px; */
+    align-self: center;
+    margin-top: 72px;
+
+
+
 }
 
 .footer-social-list {
@@ -494,7 +519,9 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--iris);
-    margin-bottom: 16px
+    margin-bottom: 16px;
+
+
 }
 
 .footer-color {
@@ -644,8 +671,10 @@ img {
 /* Customers */
 
 .customers {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-top: 120px;
+    padding-bottom: 120px; */
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .customers-title {
@@ -660,11 +689,17 @@ img {
 
 .customers-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    /* gap: 24px; */
+    row-gap: 72px;
+    column-gap: 16px;
 }
 
 .customers-item {
-    width: calc((100% - 120px) / 6);
+    /* width: calc((100% - 120px) / 6); */
+    width: calc((100% - 16px) / 2);
+
 }
 
 .customers-link {
@@ -965,6 +1000,8 @@ margin-bottom: 8px;
     display: flex;
     align-items: center;
     gap: 24px;
+
+    flex-direction: column;
 }
 
 .popup-subscribe-button {
