--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,8 @@ ol {
 
 img {
     display: block;
-    /* max-width: 100%; */
+    max-width: 100%;
+    height: auto;
 }
 
 .container {
@@ -469,7 +470,7 @@ img {
 
 .footer-column-subscribe {
     /* max-width: 453px; */
-    max-width: 198px;
+    width: 100%;
     /* margin-left: 80px; */
     align-self: center;
     margin-top: 72px;
@@ -517,7 +518,8 @@ img {
 }
 
 .footer-logo {
-    display: inline-block;
+    /* display: inline-block; */
+    display: block;
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 800;
@@ -527,6 +529,8 @@ img {
     text-transform: uppercase;
     color: var(--iris);
     margin-bottom: 16px;
+    text-align: center;
+
 }
 
 .footer-color {
@@ -540,6 +544,7 @@ img {
     letter-spacing: 0.02em;
     color: var(--white);
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .footer-text {
@@ -998,14 +1003,17 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     color: var(--white);
     margin-bottom: 16px;
+
+    text-align: center;
 }
 
 .form-footer-subscribe {
     display: flex;
-    align-items: center;
-    gap: 24px;
-
+    /* align-items: center; */
+    gap: 16px;
+    flex-wrap: wrap;
     flex-direction: column;
+
 }
 
 .popup-subscribe-button {
@@ -1040,7 +1048,8 @@ margin-bottom: 8px;
 }
 
 .subscribe-email {
-    width: 264px;
+    /* width: 264px; */
+    width: 100%;
     height: 40px;
     padding: 8px 16px 8px 16px;
     font-size: 12px;
@@ -1078,8 +1087,50 @@ margin-bottom: 8px;
 
 
 
+
+
+
+
+
+/* 320+ */
+@media screen and (min-width: 428px) {
+
+    .container {
+        width: 396px;
+    }
+
+}
+
 /* 768+ */
 @media screen and (min-width: 768px) {
+
+/* HEADER */
+
+.header-address-list {
+    flex-wrap: wrap;
+    gap: 12px;
+flex-direction: column;
+padding-top: 16px;
+padding-bottom: 16px;
+}
+
+.header-address-item {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--slate);
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.header-logo {
+    margin-right: 120px;
+}
+
+
+/* //HEADER */
+
 
 /* BANNER */
 
@@ -1119,6 +1170,10 @@ margin-bottom: 8px;
     width: calc((100% - 24px) / 2);
 }
 
+.advantages-title {
+    text-align: left;
+}
+
 /* /ADVANTAGES */
 
 /* PROJECTS */
@@ -1133,7 +1188,7 @@ margin-bottom: 8px;
 /* TEAM */
 
 .container-team {
-    width: 552px;
+    width: 582px;
 }
 
 .team-list {
@@ -1152,6 +1207,11 @@ margin-bottom: 8px;
 
 /* Customers */
 
+.customers-container {
+    width: 582px;
+
+}
+
 .customers-list {
     gap: 72px 24px;
 }
@@ -1167,14 +1227,47 @@ margin-bottom: 8px;
 
 .footer-column-1 {
     width: 264px;
+    margin-bottom: 0;
+    margin-right: 24px;
 }
 
 .footer-container {
+    width: 582px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: baseline;
+    justify-content: flex-start;
 }
+
+.title-col-subscribe {
+    text-align: left;
+}
+
+.form-footer-subscribe {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.subscribe-email {
+    width: 264px;
+}
+
+
+.footer-logo {
+    text-align: left;
+}
+
+.title-col-social {
+    text-align: left;
+}
+
+.footer-column-2 {
+    align-self: auto;
+}
+
+
+
 
 /* /FOOTER */
 
@@ -1332,6 +1425,7 @@ margin-bottom: 8px;
         max-width: 453px;
         margin-left: 80px;
         margin-top: 0;
+        align-self: auto;
     }
 
     .footer-container {
@@ -1342,9 +1436,11 @@ margin-bottom: 8px;
         display: flex;
         align-items: center;
         gap: 24px;
-    
+        margin-top: 0px;
         flex-direction: row;
     }
+
+   
 
 
 
