--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,10 @@ img {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-address {
+/* .header-address {
     font-style: normal;
     margin-left: auto;
-}
+} */
 
 
 .header-link {
@@ -108,7 +108,7 @@ img {
 }
 
 .header-address-list {
-    display: flex;
+    display: none;
     gap: 40px;
 }
 
@@ -171,15 +171,24 @@ img {
 
 .hero {
     /* max-width: 1440px; */
-    max-width: 428px;
+    /* max-width: 428px; */
+    max-width: 100%;
     /* padding-top: 188px;
     padding-bottom: 188px; */
     padding-top: 112px;
     padding-bottom: 112px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob-2x.jpg);
+  }
 }
 
 .hero-title {
@@ -1106,12 +1115,18 @@ margin-bottom: 8px;
 
 /* HEADER */
 
+.header-address {
+    font-style: normal;
+    margin-left: auto;
+}
+
 .header-address-list {
+    display: flex;
     flex-wrap: wrap;
     gap: 12px;
-flex-direction: column;
-padding-top: 16px;
-padding-bottom: 16px;
+    flex-direction: column;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .header-address-item {
@@ -1139,10 +1154,19 @@ padding-bottom: 16px;
     }
 
     .hero {
-        max-width: 768px;
+        width: 100%;
         padding-top: 112px;
         padding-bottom: 112px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet.jpg);
     }
+
+    @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tablet-2x.jpg);
+  }
+}
 
     .hero-title {
         margin-bottom: 36px;
@@ -1288,7 +1312,16 @@ padding-bottom: 16px;
         max-width: 1440px;
         padding-top: 188px;
         padding-bottom: 188px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     }
+
+    @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-2x.jpg);
+  }
+}
 
     .hero-title {
         max-width: 496px;
