--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,22 @@ img {
     color: var(--slate)
 }
 
+.menu-close-btn {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #E7E9FC;
+    border-radius: 50%;
+    padding: 0;
+    margin-left: auto;
+    margin-bottom: 32px;
+    cursor: pointer;
+    background-color: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
 /* /MOB MENU */
 
 
@@ -823,7 +839,6 @@ img {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0s;
-
 }
 
 .popup-close-btn {
