--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ img {
 
 .container {
     /* width: 1158px; */
-    width: 100%;
+    max-width: 426px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -123,6 +123,8 @@ img {
 .header-container {
     display: flex;
     align-items: center;
+    max-width: 426px;
+
 }
 
 .nav-container {
@@ -1279,8 +1281,8 @@ margin-bottom: 8px;
 
 
 
-/* 
-320+
+
+/* 320+
 @media screen and (min-width: 428px) {
 
     .container {
@@ -1333,13 +1335,14 @@ display: none;}
 
 
 
+
 /* //HEADER */
 
 
 /* BANNER */
 
     .container {
-        width: 736px;
+        min-width: 766px;
     }
 
     .hero {
@@ -1408,11 +1411,12 @@ display: none;}
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
     gap: 64px 24px;
 }
 
 .team-item {
-    width: calc((100% - 24px) / 2);
+    width: calc((552px - 24px) / 2);
 }
 
 
@@ -1427,10 +1431,13 @@ display: none;}
 
 .customers-list {
     gap: 72px 24px;
+    justify-content: center;
+
 }
 
 .customers-item {
-    width: calc((100% - 48px) / 3);
+    /* width: calc((100% - 48px) / 3); */
+    width: calc((552px - 48px) / 3);
 }
 
 /* /Customers */
@@ -1445,11 +1452,13 @@ display: none;}
 }
 
 .footer-container {
-    width: 582px;
+    min-width: 582px;
+    /* width: calc((552px - 24px) / 2); */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
+
 }
 
 .title-col-subscribe {
@@ -1499,7 +1508,7 @@ display: none;}
 /* 1158+ */
 @media screen and (min-width: 1158px) {
     .container {
-        width: 1158px;
+        min-width: 1158px;
     }
 
     /* BANNER */
