--- a/css/styles.css
+++ b/css/styles.css
@@ -1361,6 +1361,8 @@ display: none;}
 }
 
     .hero-title {
+        max-width: 496px;
+        font-size: 56px;
         margin-bottom: 36px;
     }
 
@@ -1512,6 +1514,10 @@ display: none;}
     }
 
     /* BANNER */
+
+    .header-logo {
+    margin-right: 76px;
+}
 
     .hero {
         max-width: 1440px;
